project/stage/tests/accept/empty_functions/no_params/int_func.ul
int _____123567FkoP ( ) { }
