project/stage/tests/reject/bad_print_statements/missing_semicolon.ul
boolea foo() {
    print 1
}
